--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
     "@types/d3": "^5.7.0",
     "@types/react-faux-dom": "^4.1.1",
     "d3": "^5.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-faux-dom": "^4.2.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
