--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "visualize-students",
   "version": "0.1.0",
+  "homepage": "http://OscarWiigh.github.io/Visualize-Students",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@types/d3": "^5.7.0",
     "@types/react-faux-dom": "^4.1.1",
     "d3": "^5.7.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
